--- a/product-manager.html
+++ b/product-manager.html
@@ -40,8 +40,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://boards.greenhouse.io/thirtymadison/jobs/4319309002'>Job Application for Product Designer at Thirty Madison</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=obwhafwS&__jvst=Employee&__jvsd=sm7b5hwv&__jvsc=Twitter&bid=nm3aWLwL'>Ingram Micro Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-27</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thirtymadison/jobs/4319309002'>Job Application for Product Designer at Thirty Madison</a></h5> 
+<p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/flowspace/19ee4382-3ff7-4609-ad11-aa96d4067d07'>Flowspace - Product Manager</a></h5> 
@@ -53,11 +57,11 @@
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ogJC8fwt&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=ng59WLwG'>ServiceNow Careers - Principal Product Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Tel Aviv Tel-Aviv</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Lingoda/743999692324312-jr-product-manager-analyst'>Lingoda Jr. Product Manager/Analyst | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/axon/62944344-a49e-40eb-bc46-8895977f3430'>Axon - Senior Product Manager, Realtime Services</a></h5> 
@@ -78,7 +82,7 @@
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://engineerai.workable.com/j/40E0A807F0'>Engineer.ai - What would you Build? - Jobs: Technical Product Manager - Apply online</a></h5> 
+<h5><a href='https://engineerai.workable.com/j/40E0A807F0'>Engineer.ai - What would you Build? - Jobs: Technical Product Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">California, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -102,7 +106,7 @@
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oFHBafwR'>Automation Anywhere Careers - Sr. Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oFHBafwR'>Automation Anywhere Careers - Sr. Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -132,7 +136,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://digimind.recruiterbox.com/jobs/fk03fte/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://digimind.recruiterbox.com/jobs/fk03fte/'>
     Product Owner / AMOA at Digimind
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -164,7 +168,7 @@
 <p><span class="badge badge-light">Sofia City Province, Bulgaria</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/incorta/de29ffd3-4e11-4e1a-85bb-12544e2c49d8'>Incorta - Sr Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/incorta/de29ffd3-4e11-4e1a-85bb-12544e2c49d8'>Incorta - Sr Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -184,7 +188,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/farfetch/job/oxVDafwZ'>Farfetch Careers - Product Manager - Backend</a></h5> 
+<h5><a href='https://jobs.jobvite.com/farfetch/job/oxVDafwZ'>Farfetch Careers - Product Manager - Backend</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -192,7 +196,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://bossanovarobotics.applytojob.com/apply/Ykm5T4v6eW/Product-Manager'>Product Manager - Bossanova Robotics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/Ykm5T4v6eW/Product-Manager'>Product Manager - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -208,7 +212,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kochcareers.referrals.selectminds.com/jobs/product-manager-for-separation-technology-31322'>Product Manager for Separation Technology - Koch Industries Careers</a></h5> 
+<h5><a href='https://kochcareers.referrals.selectminds.com/jobs/product-manager-for-separation-technology-31322'>Product Manager for Separation Technology - Koch Industries Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -234,7 +238,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/EvolutionGaming/743999692387237-product-owner'>Evolution Gaming Product Owner | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EvolutionGaming/743999692387237-product-owner'>Evolution Gaming Product Owner | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -254,7 +258,7 @@
 <p><span class="badge badge-light">Florida, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/forescout/job/oxGDafwK'>Forescout Technologies Inc. Careers - IoT Security Product Owner</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/forescout/job/oxGDafwK'>Forescout Technologies Inc. Careers - IoT Security Product Owner</a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -262,7 +266,7 @@
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1787197'>Job Application for Sr. Product Manager at Fitbit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1787197'>Job Application for Sr. Product Manager at Fitbit</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -282,7 +286,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/product-manager-11689'>Product Manager - Akamai Careers</a></h5> 
+<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/product-manager-11689'>Product Manager - Akamai Careers</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -292,7 +296,7 @@
 roadmap that heavily leverages Salesforce.com, customer data, and integrations
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Nextech1/743999689160331-product-manager'>Nextech Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Nextech1/743999689160331-product-manager'>Nextech Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -332,7 +336,7 @@ transactions, mobile user acquisition, social networks, commerce and money.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-grubhub.icims.com/jobs/8195/sr.-product-manager/job'>Careers at Grubhub - Sr. Product Manager in New York, New York ...</a></h5> 
+<h5><a href='https://careers-grubhub.icims.com/jobs/8195/sr.-product-manager/job'>Careers at Grubhub - Sr. Product Manager in New York, New York ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Gather and unearth business opportunities through research, data analysis, user 
 experience analysis and testing, competitive research and any other relevant?...</p>
@@ -353,7 +357,7 @@ experience analysis and testing, competitive research and any other relevant?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wayfair/jobs/4370497002'>Job Application for Senior Product Manager, Competitive Intelligence at Wayfair</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wayfair/jobs/4370497002'>Job Application for Senior Product Manager, Competitive Intelligence at Wayfair</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -452,16 +456,11 @@ designers and engineers, and operations to lead the vision, strategy, and?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/endless/e429bff6-21de-4b1d-87de-8d0065f40625'>Endless - Product Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/endless/e429bff6-21de-4b1d-87de-8d0065f40625'>Endless - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://winnow.workable.com/jobs/1081457'>Product Owner - Apply online - Winnow - Jobs</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>6 days ago ... You will have experience working as a Product Owner for a technology company 
-delivering SaaS solutions, or you might be working in a Business Analyst or?...</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
