--- a/full-stack.html
+++ b/full-stack.html
@@ -43,7 +43,7 @@
 <p>Posted on:: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/thirtymadison/jobs/4225931002'>Job Application for Full Stack Engineer at Thirty Madison</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='http://h2oai.applytojob.com/apply/Tvc2kxQVQ7/Full-Stack-Senior-Software-Engineer'>Full Stack Senior Software Engineer - h2o.ai - Career Page</a></h5> 
@@ -54,7 +54,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://hfarm.applytojob.com/apply/sMATwC5scH/Junior-FullStack-Developer'>Junior Full-Stack Developer - H-FARM S.p.A - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://hfarm.applytojob.com/apply/sMATwC5scH/Junior-FullStack-Developer'>Junior Full-Stack Developer - H-FARM S.p.A - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -66,7 +66,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://innogy.join.com/jobs/273702-full-stack-engineer-m-f-d-for-calipsa'>Job @ innogy Innovation Hub (London): Full Stack E... | JOIN</a></h5> 
+<h5><a href='https://innogy.join.com/jobs/273702-full-stack-engineer-m-f-d-for-calipsa'>Job @ innogy Innovation Hub (London): Full Stack E... | JOIN</a></h5> 
 <p><span class="badge badge-light">London London, United Kingdom</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -86,7 +86,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CaziSoft/743999692409229-sr-full-stack-software-engineer'>CaziSoft Sr. Full Stack Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CaziSoft/743999692409229-sr-full-stack-software-engineer'>CaziSoft Sr. Full Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -94,7 +94,7 @@
 <p><span class="badge badge-light">San Francisco San Diego</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AxiusTechnologiesInc/743999692136126-java-fullstack-developer'>Axius Technologies Inc Java Fullstack Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AxiusTechnologiesInc/743999692136126-java-fullstack-developer'>Axius Technologies Inc Java Fullstack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -135,7 +135,7 @@ Apply Now. What you will do: Be a part of our development team and actively?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/9BC21A23EC'>Alpha - Jobs: Senior Full-Stack Engineer - NYC or Remote (US ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/9BC21A23EC'>Alpha - Jobs: Senior Full-Stack Engineer - NYC or Remote (US ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... ... scaling our microservices to handling real- time video and using machine 
 learning and natural language processing to empower real world business 
@@ -214,7 +214,7 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351833-fullstack-web-developer'>Lecle Vietnam Fullstack Web Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LecleVietnam1/743999692351833-fullstack-web-developer'>Lecle Vietnam Fullstack Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -222,7 +222,7 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://pod-point.workable.com/j/EFDF12E5CD'>Pod Point Ltd - Jobs: Full Stack (PHP/JS) Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pod-point.workable.com/j/EFDF12E5CD'>Pod Point Ltd - Jobs: Full Stack (PHP/JS) Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -323,7 +323,7 @@ Rochester School is a private school focused on environmental sustainability and
 <p><span class="badge badge-light">Columbus, Ohio San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/corelight/jobs/1789019'>Job Application for Engineering: Sr. Full-Stack Engineer at Job Board</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/corelight/jobs/1789019'>Job Application for Engineering: Sr. Full-Stack Engineer at Job Board</a></h5> 
 <p><span class="badge badge-light">San Francisco, California San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -331,7 +331,7 @@ Rochester School is a private school focused on environmental sustainability and
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://assistrcare.join.com/jobs/262752-senior-full-stack-engineer-javascript-python-m-f-x'>Job @ AssistMe (Berlin): Senior Full Stack Enginee... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://assistrcare.join.com/jobs/262752-senior-full-stack-engineer-javascript-python-m-f-x'>Job @ AssistMe (Berlin): Senior Full Stack Enginee... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -374,7 +374,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://itech.applytojob.com/apply/BrqDFRjGX2/Full-Stack-Developer'>Full Stack Developer - iTech Media - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://itech.applytojob.com/apply/BrqDFRjGX2/Full-Stack-Developer'>Full Stack Developer - iTech Media - Career Page</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
